restyle main work page

--- a/src/assets/sass/website/components/work/work-main-page.scss
+++ b/src/assets/sass/website/components/work/work-main-page.scss
@@ -3,12 +3,16 @@
 @import "../../shared/half-clipped-shape.scss";
 
 .work-page-wrapper {
-  width: 80%;
+  width: 100%;
   margin: auto;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 15px 0 100px 15px;
   user-select: none;
+  position: relative;
   &__content-wrapper {
+    padding-right: 15px !important;
+    a div img {
+      width: 100%;
+    }
     &:hover {
       img {
         filter: brightness(50%);
@@ -30,43 +34,48 @@
   &__content {
     position: relative;
     color: $header-item;
-    margin: 20px;
-    @media (min-width: 2000px) {
-      width: 490px;
-      height: 490px;
-    }
-    @media (min-width: 1500px) and (max-width: 1999px) {
-      width: 420px;
-      height: 420px;
-    }
-    @media (min-width: 1300px) and (max-width: 1499px) {
-      width: 330px;
-      height: 330px;
-    }
-    @media (min-width: 1200px) and (max-width: 1299px) {
-      width: 320px;
-      height: 320px;
-    }
-    @media (min-width: 800px) and (max-width: 1199px) {
-      width: 280px;
-      height: 280px;
-    }
-    @media (min-width: 500px) and (max-width: 767px) {
-      width: 380px;
-      height: 380px;
-      margin: 15px auto;
-    }
-    @media (max-width: 499px) {
-      width: 100%;
-      height: auto;
-      margin: 0 0 10px 0;
-    }
+    padding-bottom: 15px;
+    height: 100%;
+    // @media (min-width: 2000px) {
+    //   width: 490px;
+    //   height: 490px;
+    // }
+    // @media (min-width: 1500px) and (max-width: 1999px) {
+    //   width: 420px;
+    //   height: 420px;
+    // }
+    // @media (min-width: 1300px) and (max-width: 1499px) {
+    //   width: 330px;
+    //   height: 330px;
+    // }
+    // @media (min-width: 1200px) and (max-width: 1299px) {
+    //   width: 320px;
+    //   height: 320px;
+    // }
+    // @media (min-width: 800px) and (max-width: 1199px) {
+    //   width: 280px;
+    //   height: 280px;
+    // }
+    // @media (min-width: 500px) and (max-width: 767px) {
+    //   width: 380px;
+    //   height: 380px;
+    //   margin: 15px auto;
+    // }
+    // @media (max-width: 499px) {
+    //   width: 100%;
+    //   height: auto;
+    //   margin: 0 0 10px 0;
+    // }
     img {
       width: 100%;
       height: 100%;
+      border-radius: 10px;
       object-fit: cover;
       clip-path: polygon(0% 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0%);
       transition: all 0.2s ease-in-out;
+      @include is-extra-small-mobile {
+        min-height: 250px;
+      }
     }
   }
   p {
@@ -93,7 +102,7 @@
     transition: all 0.5s ease-in-out;
     h2 {
       font-family: Arial;
-    font-weight: bold;
+      font-weight: bold;
       font-size: 1.8rem;
     }
   }
