--- a/src/assets/sass/website/containers/work.scss
+++ b/src/assets/sass/website/containers/work.scss
@@ -2,9 +2,8 @@
 @import "../variables.scss";
 @import "../mixins.scss";
 
-
-.work-wrapper{
-    background-color: $primary;
-    margin-top: -120px;
-    padding-top: 120px;
+.work-wrapper {
+  background-color: $accent;
+  margin-top: -120px;
+  padding-top: 120px;
 }
