--- a/src/assets/sass/website/containers/about.scss
+++ b/src/assets/sass/website/containers/about.scss
@@ -23,18 +23,29 @@
   height: max-content;
   margin-top: -$header-height;
   min-height: calc(100vh - #{$footer-height});
-  @include is-mobile {
-    margin-top: -$header-height-mobile - 45;
-    min-height: calc(100vh - #{$footer-height-mobile});
-  }
-  @include is-extra-small-mobile {
-    margin-top: -75px;
-  }
-  .hero-wrapper {
-    @include is-extra-small-mobile {
-      padding-top: 150px;
-    }
-  }
+  // // background-color: $primary;
+  // height: max-content;
+  // // margin-top: -$header-height;
+  // // min-height: calc(100vh - #{$footer-height});
+  // width: 100%;
+  // margin: auto;
+  // user-select: none;
+  // // padding: 15px 0 100px 15px;
+  // position: relative;
+  // background-color: $accent;
+  // z-index: 102;
+  // @include is-mobile {
+  //   margin-top: -$header-height-mobile - 45;
+  //   min-height: calc(100vh - #{$footer-height-mobile});
+  // }
+  // @include is-extra-small-mobile {
+  //   margin-top: -75px;
+  // }
+  // .hero-wrapper {
+  //   @include is-extra-small-mobile {
+  //     padding-top: 150px;
+  //   }
+  // }
   .about-container {
     .half-filled-box {
       cursor: auto;
@@ -65,7 +76,7 @@
         user-select: none;
         font-size: 2.5rem;
         font-family: Arial;
-    font-weight: bold;
+        font-weight: bold;
         margin-top: 20px;
         @include max-width-1650 {
           font-size: 2rem;
@@ -89,51 +100,25 @@
       }
     }
   }
-}
-
-/deep/ .half-filled-box {
-  .about-container__heroContent {
-    // overflow-y: auto;
+  &__bg {
+    width: 69.8%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    z-index: 100;
+    padding-top: $header-height;
+    @include is-extra-small-mobile {
+      width: 68.8%;
+    }
   }
-  min-height: 300px;
-}
-
-// All have vw as divide operation units must be the same for all
-$width: 80vw;
-$height: 22vw;
-$clipped-length: 4vw;
-
-$widths-and-heights: (
-  clipped-shape-width: $width,
-  clipped-shape-height: $height,
-  clipped-length: $clipped-length,
-  clipped-shape-width-xs: 90vw,
-  clipped-shape-height-xs: (
-    $height + 15vw
-  ) * 3,
-  clipped-length-xs: $clipped-length,
-  clipped-shape-width-sm: (
-    $width + 10vw
-  ),
-  clipped-shape-height-sm: (
-    $height + 9vw
-  ) * 2,
-  clipped-length-sm: $clipped-length,
-  clipped-shape-width-md: $width + 17vw,
-  clipped-shape-height-md: $height * 2 + 3,
-  clipped-length-md: $clipped-length,
-  clipped-shape-width-lg: $width + 15vw,
-  clipped-shape-height-lg: $height + 15vw,
-  clipped-length-lg: $clipped-length,
-  clipped-shape-width-xlg: $width + 10vw,
-  clipped-shape-height-xlg: $height + 10vw,
-  clipped-length-xlg: $clipped-length,
-  clipped-shape-width-xxlg: $width - 10vw,
-  clipped-shape-height-xxlg: $height + 3vw,
-  clipped-length-xxlg: $clipped-length
-);
-
-// use /deep/ to apply scss classes to the child components
-div /deep/ {
-  @include filled-half-clipped-shape($widths-and-heights, rgba($primary, 0.95));
+  &__content {
+    width: 100%;
+    margin: auto;
+    user-select: none;
+    padding: 15px 0 100px 15px;
+    position: relative;
+    background-color: $accent;
+    z-index: 102;
+  }
 }
