--- a/src/assets/sass/website/components/jobs/jobs-main-content.scss
+++ b/src/assets/sass/website/components/jobs/jobs-main-content.scss
@@ -2,100 +2,159 @@
 @import "../../color-palette.scss";
 @import "../../shared/half-clipped-shape.scss";
 
-.job-main-content-wrapper{
-    background-color: $primary;
-    margin-top: -120px;
-    padding-top: 120px;
-    &__container{
-        width: 76%;
-        margin: auto;
-        padding-top: 50px;
-        padding-bottom: 100px;
-    }
-    &__title{
-        width: 70%;
-        h1{
-            text-transform: uppercase;
-            font-family: Arial;
-    font-weight: bold;
-            color: $header-item;
-            @include is-mobile {
-                font-size: 2rem;
-            }
-            @include is-extra-small-mobile{
-                font-size: 2rem;
-            }
-        }
-        p{
-            color: $sub-text;
-            width: 57%;
-            font-size: 1.2rem;
-            @include is-large-desktop {
-                width: 70%;
-            }
-            @include is-desktop {
-                width: 80%;
-            }
-            @include is-tablet {
-                width: 100%;
-            }
-            @include is-mobile {
-                width: 100%;
-                font-size: 1.1rem;
-            }
-            @include is-extra-small-mobile{
-                width: 100%;
-                font-size: 1.1rem;
-            }
-        }
-    }
-
-    &__jobs{
-        width: 100%;
-    @media (min-width: 992px){
-        .col-lg-4 {
-            max-width: 31.333333%!important;
-        }
-    }
-    @media (min-width: 768px){
-        .col-md-6 {
-            max-width: 46%;
-        }
-    }
-        &__content{
-            background-color: $form-background;
-            width: 100%;
-            padding-top: 40px;
-            padding-bottom: 40px;
-            margin: 6px;
-        }
-    
-
-
-    }
-   &__job-title{
-    overflow: auto;
-       p{
-        color: $sub-text;
-        font-size: 1.2rem;
-       }
-       h3{
-        color: $header-item; 
-        font-family: Arial;
-    font-weight: bold; 
-        margin: 0px 0 50px;
-       }
-   } 
-   &__details-btn{
-    display: flex;
-    justify-content: flex-end;
-   }
-}
-
-/deep/ div.outline-box__inside.outline-box__inside--is-button{
-    background-color: $form-background;
-    &:hover{
-      background-color: $accent;
-      color: $header-item;
+.job-main-content-wrapper {
+  background-color: $primary;
+  height: max-content;
+  margin-top: -$header-height;
+  min-height: calc(100vh - #{$footer-height});
+  &__bg {
+    width: 69.8%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    z-index: 100;
+    padding-top: $header-height;
+    @include is-extra-small-mobile {
+      width: 68.8%;
     }
   }
+  &__container {
+    width: 100%;
+    margin: auto;
+    user-select: none;
+    position: relative;
+    background-color: $accent;
+    z-index: 102;
+  }
+  &__title {
+    width: 70%;
+    text-align: center;
+    h1 {
+      text-transform: uppercase;
+      font-family: Arial;
+      font-weight: bold;
+      color: $header-item;
+      height: fit-content;
+      margin-top: 120px;
+      @include is-mobile {
+        font-size: 2rem;
+      }
+      @include is-extra-small-mobile {
+        font-size: 2rem;
+      }
+    }
+    p {
+      margin-top: 50px;
+      color: $sub-text;
+      //   width: 57%;
+      text-align: center;
+      font-size: 1.2rem;
+      //   @include is-large-desktop {
+      //     width: 70%;
+      //   }
+      //   @include is-desktop {
+      //     width: 80%;
+      //   }
+      //   @include is-tablet {
+      //     width: 100%;
+      //   }
+      //   @include is-mobile {
+      //     width: 100%;
+      //     font-size: 1.1rem;
+      //   }
+      //   @include is-extra-small-mobile {
+      //     width: 100%;
+      //     font-size: 1.1rem;
+      //   }
+    }
+  }
+
+  &__jobs {
+    width: 70%;
+    margin: 20px auto;
+    // @media (min-width: 992px) {
+    //   .col-lg-4 {
+    //     max-width: 31.333333% !important;
+    //   }
+    // }
+    // @media (min-width: 768px) {
+    //   .col-md-6 {
+    //     max-width: 46%;
+    //   }
+    // }
+    &__content {
+      display: flex;
+      background-color: $form-background;
+      width: 100%;
+      padding: 10px;
+      margin: 6px;
+      border-radius: 10px;
+      //   height: 80%;
+    }
+  }
+  &__job-title {
+    overflow: auto;
+    width: 70%;
+    max-width: 70% !important;
+    margin-left: 20px;
+    h3 {
+      margin-top: 10px;
+      color: $sub-text;
+      font-size: 1.6rem;
+    }
+    p {
+      color: $header-item;
+      font-family: Arial;
+      font-weight: bold;
+      font-size: 1.8rem;
+      margin-bottom: 0;
+    }
+  }
+  &__details-btn {
+    width: 80px;
+    text-align: center;
+    // height: 50px;
+    // max-width: 30% !important;
+    // display: flex;
+    // justify-content: flex-end;
+    // align-items: flex-end;
+    // margin-bottom: 10px;
+    position: absolute;
+    bottom: 15px;
+    right: 35px;
+    font-size: 0.8rem;
+    cursor: pointer;
+    z-index: 100;
+    background-color: $white-text;
+    border-radius: 5px;
+    border: 1px $blue-stroke solid;
+    outline: none;
+    padding: 5px 12px;
+    box-shadow: 0 0 10px $blue-stroke;
+    a {
+      color: $black-text;
+      width: 100%;
+      height: 100%;
+      span {
+        padding: 5px 12px;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    @include is-extra-small-mobile {
+      bottom: 0;
+    }
+    @include is-mobile {
+      bottom: 0;
+    }
+  }
+}
+
+/deep/ div.outline-box__inside.outline-box__inside--is-button {
+  background-color: $form-background;
+  &:hover {
+    background-color: $accent;
+    color: $header-item;
+  }
+}
