--- a/src/assets/sass/website/components/about/about-section-data.scss
+++ b/src/assets/sass/website/components/about/about-section-data.scss
@@ -5,7 +5,7 @@
 $left: 25px;
 $shift: 40px;
 
-$extra-lg-dim: calc(#{$slide-height} + #{$shift});
+$extra-lg-dim: calc(#{$about-container-height} + #{$shift});
 
 ::-webkit-scrollbar {
   width: 5px;
@@ -110,13 +110,16 @@ $text-minheight-pc: 706px;
     font-weight: bolder;
     font-size: 2rem;
     letter-spacing: 4px;
-    margin-bottom: 0;
+    margin-bottom: -15px;
     margin-left: 30px;
   }
   &__image {
-    object-fit: cover;
+    // object-fit: cover;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     width: 100%;
-    height: 100%;
+    // height: 100%;
     border-radius: 10px;
     // position: absolute;
     // right: 0;
@@ -153,9 +156,12 @@ $text-minheight-pc: 706px;
     }
     @include is-extra-large-desktop {
       height: $extra-lg-dim;
-      width: $extra-lg-dim + 50px;
-      max-width: $extra-lg-dim + 50px;
-      min-width: $extra-lg-dim;
+      // width: calc(#{$extra-lg-dim} + 50px);
+      // width: 100%;
+      // max-width: 100%;
+      // min-width: 100%;
+      // max-width: calc(#{$extra-lg-dim} + 50px);
+      // min-width: $extra-lg-dim;
     }
     @media (min-width: 1400px) and (max-width: 1599px) {
       // height: 100%;
@@ -163,6 +169,23 @@ $text-minheight-pc: 706px;
     @media (min-width: 1600px) {
       // height: 100%;
     }
+  }
+  &__video {
+    height: $extra-lg-dim;
+    border-radius: 10px;
+    video {
+      height: 100%;
+      object-fit: cover;
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+  &__slider {
+    display: flex;
+    align-items: center;
+    height: $extra-lg-dim;
+    padding: 15px;
   }
   &__description {
     // div {
@@ -172,7 +195,7 @@ $text-minheight-pc: 706px;
     //   line-height: 33px;
     // }
     padding: 20px 10px 20px 15px;
-    height: $slide-height;
+    height: $about-container-height;
     margin-top: $shift/2;
     background-color: $form-background;
     text-align: left;
