--- a/src/assets/sass/website/components/jobs/job-form.scss
+++ b/src/assets/sass/website/components/jobs/job-form.scss
@@ -22,18 +22,21 @@
       padding: 30px;
     }
     @include is-extra-large-desktop {
-      padding: 50px;
+      padding: 30px;
     }
     .form-group {
       position: relative;
-      margin-bottom: 30px;
+      // margin-bottom: 35px;
       label {
-        background-color: $form-background;
-        position: absolute;
-        top: -10px;
-        left: 50px;
+        background-color: transparent;
+        // position: absolute;
+        // top: -25px;
+        // left: 20px;
         z-index: 1;
+        text-align: left;
         color: white;
+        width: 100%;
+        margin-left: 20px;
       }
       &__short-label {
         width: 60px;
@@ -46,53 +49,126 @@
       }
     }
   }
-  &__input-outline-mask,
-  &__input-outline-mask input,
-  &__input-outline-mask select {
-    $extra-small-mobile: (
-      clipped-shape-width: 50%,
-      clipped-shape-height: 7%,
-      clipped-length: 3.5%
-    );
-    $mobile: (
-      clipped-shape-width: 90%,
-      clipped-shape-height: 7%,
-      clipped-length: 3.5%
-    );
-    $tablet: (
-      clipped-shape-width: 90%,
-      clipped-shape-height: 7%,
-      clipped-length: 3.5%
-    );
-    $desktop: (
-      clipped-shape-width: 80%,
-      clipped-shape-height: 7%,
-      clipped-length: 3.5%
-    );
-    $large-desktop: (
-      clipped-shape-width: 90%,
-      clipped-shape-height: 8%,
-      clipped-length: 4%
-    );
-    $extra-large-desktop: (
-      clipped-shape-width: 100%,
-      clipped-shape-height: 8%,
-      clipped-length: 4%
-    );
-    @include set-half-clipped-shape-for-input(
-      $extra-small-mobile,
-      $mobile,
-      $tablet,
-      $desktop,
-      $large-desktop,
-      $extra-large-desktop
-    );
+  // &__input-outline-mask,
+  // &__input-outline-mask input,
+  // &__input-outline-mask select {
+  //   $extra-small-mobile: (
+  //     clipped-shape-width: 50%,
+  //     clipped-shape-height: 7%,
+  //     clipped-length: 3.5%
+  //   );
+  //   $mobile: (
+  //     clipped-shape-width: 90%,
+  //     clipped-shape-height: 7%,
+  //     clipped-length: 3.5%
+  //   );
+  //   $tablet: (
+  //     clipped-shape-width: 90%,
+  //     clipped-shape-height: 7%,
+  //     clipped-length: 3.5%
+  //   );
+  //   $desktop: (
+  //     clipped-shape-width: 80%,
+  //     clipped-shape-height: 7%,
+  //     clipped-length: 3.5%
+  //   );
+  //   $large-desktop: (
+  //     clipped-shape-width: 90%,
+  //     clipped-shape-height: 8%,
+  //     clipped-length: 4%
+  //   );
+  //   $extra-large-desktop: (
+  //     clipped-shape-width: 100%,
+  //     clipped-shape-height: 8%,
+  //     clipped-length: 4%
+  //   );
+  //   @include set-half-clipped-shape-for-input(
+  //     $extra-small-mobile,
+  //     $mobile,
+  //     $tablet,
+  //     $desktop,
+  //     $large-desktop,
+  //     $extra-large-desktop
+  //   );
+  // }
+  &__submit-btn {
+    width: 100px;
+    height: max-content;
+    text-align: center;
+    // height: 50px;
+    // max-width: 30% !important;
+    // display: flex;
+    // justify-content: flex-end;
+    // align-items: flex-end;
+    // margin-bottom: 10px;
+    // position: absolute;
+    // top: 0;
+    // right: 35px;
+    font-size: 0.8rem;
+    cursor: pointer;
+    z-index: 100;
+    color: black !important;
+    background-color: $white-text;
+    border-radius: 5px;
+    border: 1px $blue-stroke solid;
+    outline: none;
+    padding: 7px 12px;
+    box-shadow: 0 0 10px $blue-stroke;
+    a {
+      color: $black-text;
+      width: 100%;
+      height: 100%;
+      span {
+        padding: 5px 12px;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    @include is-extra-small-mobile {
+      bottom: 0;
+    }
+    @include is-mobile {
+      bottom: 0;
+    }
+  }
+  &__upload-btn {
+    width: 70% !important;
+    height: max-content;
+    text-align: center;
+    margin-left: 0 !important;
+    // height: 50px;
+    // max-width: 30% !important;
+    // display: flex;
+    // justify-content: flex-end;
+    // align-items: flex-end;
+    // margin-bottom: 10px;
+    background: white !important;
+    color: black !important;
+    // position: absolute;
+    // bottom: 15px;
+    font-size: 0.8rem;
+    cursor: pointer;
+    z-index: 100;
+    background-color: $white-text;
+    border-radius: 5px;
+    border: 1px $blue-stroke solid;
+    outline: none;
+    padding: 7px 12px;
+    box-shadow: 0 0 10px $blue-stroke;
+    text-align: center !important;
+    @include is-extra-small-mobile {
+      bottom: 0;
+    }
+    @include is-mobile {
+      bottom: 0;
+    }
   }
   &__input-outline-mask {
     position: relative;
-    background-color: $light-white;
+    background-color: $primary;
     width: 100%;
     height: $input-form-height;
+    border-radius: 5px;
 
     input,
     select {
@@ -122,6 +198,17 @@
   }
   input[type="file"] {
     display: none;
+  }
+  &__footer-left {
+    width: 50%;
+    height: max-content;
+    text-align: left;
+  }
+  &__footer-right {
+    width: 50%;
+    height: max-content;
+    display: flex;
+    justify-content: flex-end;
   }
 }
 .job-form-wrapper
