--- a/src/assets/sass/website/containers/about.scss
+++ b/src/assets/sass/website/containers/about.scss
@@ -69,7 +69,12 @@
       width: 80%;
       height: 100%;
       margin: auto;
-      text-align: left;
+      text-align: center;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
 
       h1 {
         color: $header-item;
