--- a/src/assets/sass/website/containers/contact.scss
+++ b/src/assets/sass/website/containers/contact.scss
@@ -3,8 +3,23 @@
 @import "../mixins.scss";
 
 .contact-wrapper {
-  @include initializePageStyle;
-
+  // @include initializePageStyle;
+  background-color: $primary;
+  height: max-content;
+  margin-top: -$header-height;
+  min-height: calc(100vh - #{$footer-height});
+  &__bg {
+    width: 69.8%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    z-index: 100;
+    padding-top: $header-height;
+    @include is-extra-small-mobile {
+      width: 68.8%;
+    }
+  }
   &__contact-box {
     padding-bottom: 100px;
     height: 100%;
@@ -12,5 +27,13 @@
       padding-bottom: 0px;
       height: max-content;
     }
+  }
+  &__content {
+    width: 100%;
+    margin: auto;
+    user-select: none;
+    position: relative;
+    background-color: $accent;
+    z-index: 102;
   }
 }
